<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SFC Shipping</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="shipping_title">SFC Shipping</string>
    <string name="emp_title">權 限:</string>
    <string name="ship_by">Ship單位:</string>
    <string name="dn_title">DN號:</string>
    <string name="model_name">機種:</string>
    <string name="ship_qty">出貨數量:</string>
    <string name="shipping_btn">出	貨</string>
    <string name="dn_tip">輸入DN</string>
    <string name="emp_tip">輸入權限</string>
    <string name="scan_qty">掃描總數</string>
    <string name="login">LOGIN</string>
    <string name="dn_ok">查 詢</string>
    <string name="scanCode">掃  描  條 碼</string>
    <string name="carton_list">Carton List</string>
    <string name="carton_qty">Carton Qty</string>
    <string name="scan_title">掃       描</string>
    <string name="scan_cancel">取      消</string>
    <string name="query">查 詢</string>
    <string name="scan">掃 描</string>
    <string name="change_user">切換用戶</string>

</resources>
